More bean conversion including formInput